--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,10 @@ ul {
     padding: 10px 32px;
 }
 
+.hero-btn:hover {
+background-color: rgba(255, 255, 255, 0.6);
+}
+
 /* -----------------ADVANTAGES----------------- */
 
 .advantages{
