--- a/css/styles.css
+++ b/css/styles.css
@@ -372,3 +372,7 @@ background-color: rgba(255, 255, 255, 0.6);
     padding: 20px 24px;
     
 }
+
+.gallery-item {
+    border: 1px solid #EEEEEE;
+}
