--- a/css/styles.css
+++ b/css/styles.css
@@ -259,6 +259,11 @@ background-color: rgba(255, 255, 255, 0.6);
 .container-item{
     padding-top: 30px;
     padding-bottom: 30px;
+
+    margin-top: -4px;
+    
+    background-color: var(--main-accent-color);
+    border-radius: 0px 0px 4px 4px;
 }
 
 /* -----------------FOOTER----------------- */
